--- a/modules/shapeshift-sdk/tsconfig.json
+++ b/modules/shapeshift-sdk/tsconfig.json
@@ -8,11 +8,6 @@
     "rootDir": "src",
     "strict": true,
     "types": ["node"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "baseUrl": "./src",
-    "paths": {
-      "@data/*": ["data/*"]
-    }
+    "esModuleInterop": true
   }
 }
