bitcoin cli working

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "npm": "npm i",
     "npm-update": "npm update",
     "lint": "prettier --write '**/**/*.ts'",
-    "start": "npm run build && node lib/index.js",
+    "dev": "npm run build && node lib/cli.js",
+    "start": "npm run build && node lib/cli.js",
     "shift": "npm run build && node lib/index.js shift --pair ETH_DAI --amount 0.003 --env=stage",
     "export-wallet": "npm run build && node lib/index.js export --format citadel --walletId highlander-restore-7",
     "send-eth": "npm run build && node lib/index.ts send --yes --coin ETH --amount 0.001 --address 0x33b35c665496bA8E71B22373843376740401F106",
@@ -55,6 +56,7 @@
     "generate-password": "^1.5.1",
     "inquirer": "^7.3.3",
     "inquirer-promise": "^1.0.0",
+    "json-beautify": "^1.1.1",
     "light-event-bus": "^1.0.1",
     "loggerdog-client": "0.0.4",
     "mkdirp": "^1.0.4",
