--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pioneer-platform/pioneer-cli-v2",
+  "name": "@pioneer-platform/shapeshift-cli",
   "version": "8.1.42",
   "main": "./lib/index.js",
   "bin": {
@@ -15,10 +15,11 @@
     "lint": "prettier --write '**/**/*.ts'",
     "dev": "npm run build && node lib/cli.js",
     "start": "npm run build && node lib/cli.js",
-    "shift": "npm run build && node lib/index.js shift --pair ETH_DAI --amount 0.003 --env=stage",
+    "link": "yarn link @shapeshiftoss/chain-adapters @shapeshiftoss/unchained-client",
     "export-wallet": "npm run build && node lib/index.js export --format citadel --walletId highlander-restore-7",
-    "send-eth": "npm run build && node lib/index.ts send --yes --coin ETH --amount 0.001 --address 0x33b35c665496bA8E71B22373843376740401F106",
-    "send-dai": "npm run build && node lib/index.ts send --yes --coin DAI --amount 0.01 --address 0x33b35c665496bA8E71B22373843376740401F106",
+    "send-btc": "npm run build && npm run dev tx send btc bc1qkumt74m9tl0anhrga37t52xlknu0eag3scg7nr 0.001 --yes",
+    "send-eth": "npm run build && npm run dev tx send eth 0xfEb8bf56e554fc47639e5Ed9E1dAe21DfF69d6A9 0.001 --yes",
+    "send-osmo": "npm run build && npm run dev tx send osmo osmo1a7xqkxa4wyjfllme9u3yztgsz363dalz3lxtj6 0.001 --yes",
     "run-bridge": "npm run build && node lib/index.ts --auth",
     "create": "npm run build && node lib/index.ts create app",
     "build-test": "npm run build && npm run test",
@@ -35,6 +36,7 @@
     "@shapeshiftoss/hdwallet-native": "^1.18.4",
     "@shapeshiftoss/types": "^1.16.1",
     "@shapeshiftoss/unchained-client": "^3.7.0",
+    "@shapeshiftoss/unchained-tx-parser": "^4.0.0",
     "@types/big.js": "^6.1.2",
     "@types/crypto-js": "^4.0.2",
     "@types/elliptic": "^6.4.14",
@@ -54,6 +56,7 @@
     "find-package-json": "^1.2.0",
     "fs-extra": "^9.0.0",
     "generate-password": "^1.5.1",
+    "google-protobuf": "^3.19.1",
     "inquirer": "^7.3.3",
     "inquirer-promise": "^1.0.0",
     "json-beautify": "^1.1.1",
